--- a/PalworldServerManager/PalworldServerManager/Form_RCON.zh-Hans.resx
+++ b/PalworldServerManager/PalworldServerManager/Form_RCON.zh-Hans.resx
@@ -129,20 +129,24 @@
   <data name="panel1.ToolTip" xml:space="preserve">
     <value />
   </data>
+  <data name="button1.ToolTip" xml:space="preserve">
+    <value />
+  </data>
   <data name="richTextBox_output.Text" xml:space="preserve">
     <value>====================================================================
 Info - (显示服务器信息)
 Save - (保存游戏)
-Broadcast {MessageText} - (向服务器上的所有玩家显示消息)
+Broadcast {消息} - (向服务器上的所有玩家显示消息)
 ShowPlayers - (显示当前服务器玩家)
 KickPlayer {Steam ID} - (踢出玩家)
 BanPlayer {Steam ID} - (封禁玩家)
-Shutdown {Seconds} {MessageText} - (通知服务器在线玩家n秒后服务器关闭)
+Shutdown {秒} {消息} - (通知服务器在线玩家n秒后服务器关闭)
 DoExit - (停止服务器)
 ====================================================================
-
-注意！
-RCON  是测试版功能，我仍在开发中，目前只能在本地 127.0.0.1 上运行。
+注意：
+RCON 仅支持 ASCII 可打印字符
+如果您的指令、服务器名称或玩家名称包含非 ascii 可打印字符，指令将会超时
+====================================================================
 </value>
   </data>
   <data name="richTextBox_output.ToolTip" xml:space="preserve">
@@ -233,7 +237,7 @@ RCON  是测试版功能，我仍在开发中，目前只能在本地 127.0.0.1 
   <data name="textBox_passwordRCON.ToolTip" xml:space="preserve">
     <value />
   </data>
-  <data name="button1.ToolTip" xml:space="preserve">
+  <data name="checkBox_autoUpdatePlayerList.ToolTip" xml:space="preserve">
     <value />
   </data>
   <data name="$this.ToolTip" xml:space="preserve">
