--- a/PalworldServerManager/PalworldServerManager/Form1.resx
+++ b/PalworldServerManager/PalworldServerManager/Form1.resx
@@ -714,6 +714,18 @@ It is effective up to a maximum of about 4 threads, and allocating more than thi
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>114, 17</value>
   </metadata>
+  <data name="serverSettingsToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="serverSettingsToolStripMenuItem1.Text" xml:space="preserve">
+    <value>Server Settings</value>
+  </data>
+  <data name="serverRestartToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="serverRestartToolStripMenuItem.Text" xml:space="preserve">
+    <value>Server Restart</value>
+  </data>
   <data name="serverSettingsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>96, 20</value>
   </data>
@@ -1685,6 +1697,18 @@ It is effective up to a maximum of about 4 threads, and allocating more than thi
     <value>serverSettingsToolStripMenuItem</value>
   </data>
   <data name="&gt;&gt;serverSettingsToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;serverSettingsToolStripMenuItem1.Name" xml:space="preserve">
+    <value>serverSettingsToolStripMenuItem1</value>
+  </data>
+  <data name="&gt;&gt;serverSettingsToolStripMenuItem1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;serverRestartToolStripMenuItem.Name" xml:space="preserve">
+    <value>serverRestartToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;serverRestartToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;rCONToolStripMenuItem.Name" xml:space="preserve">
