--- a/PalworldServerManager/PalworldServerManager/Form1.zh-Hans.resx
+++ b/PalworldServerManager/PalworldServerManager/Form1.zh-Hans.resx
@@ -211,6 +211,18 @@
   <data name="serverSettingsToolStripMenuItem.Text" xml:space="preserve">
     <value>服务器设置</value>
   </data>
+  <data name="serverSettingsToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="serverSettingsToolStripMenuItem1.Text" xml:space="preserve">
+    <value>服务器设置</value>
+  </data>
+  <data name="serverRestartToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="serverRestartToolStripMenuItem.Text" xml:space="preserve">
+    <value>服务器重启时间表</value>
+  </data>
   <data name="rCONToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>52, 21</value>
   </data>
@@ -224,7 +236,7 @@
     <value>帮助</value>
   </data>
   <data name="instructionToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>100, 22</value>
   </data>
   <data name="instructionToolStripMenuItem.Text" xml:space="preserve">
     <value>说明</value>
@@ -239,10 +251,10 @@
     <value>语言</value>
   </data>
   <data name="englishToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>121, 22</value>
   </data>
   <data name="chineseToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>121, 22</value>
   </data>
   <data name="directoryToolStripMenuItem.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft YaHei, 9pt</value>
@@ -254,19 +266,13 @@
     <value>目录</value>
   </data>
   <data name="baseDirectoryToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>124, 22</value>
   </data>
   <data name="baseDirectoryToolStripMenuItem.Text" xml:space="preserve">
     <value>基层目录</value>
   </data>
   <data name="githubToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>55, 21</value>
-  </data>
-  <data name="githubToolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
-  </data>
-  <data name="repoPageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
